--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
 :root{
   --card:#f7f8fb; --text:#0f172a; --muted:#475569; --line:#e2e8f0; --accent:#d61f1f; --shadow:0 6px 18px rgba(15,23,42,.08);
   --c1:#e11d48; --c2:#16a34a; --c3:#2563eb; --c4:#7c3aed; --c5:#ea580c; --c6:#db2777; --c7:#0891b2;
-  --row-gap:10px; --row-pad-v:12px; /* вертикальные внутренние отступы chart-row */
+  --row-gap:10px; --row-pad-v:12px;
 }
-*{box-sizing:border-box} body{margin:0;background:linear-gradient(180deg,#fff,#fafbff 55%,#f5f7fb);color:var(--text);font:500 16px/1.45 Inter,system-ui,Segoe UI,Roboto,Arial}
+*{box-sizing:border-box}
+body{margin:0;background:#fff;color:var(--text);font:500 16px/1.45 Inter,system-ui,Segoe UI,Roboto,Arial}
 .wrap{max-width:1200px;margin:16px auto;padding:12px}
 .card{background:var(--card);border:1px solid var(--line);border-radius:16px;box-shadow:var(--shadow)}
 .header{display:flex;gap:12px;align-items:center;justify-content:space-between;padding:12px 16px;border-bottom:1px solid var(--line)}
@@ -21,32 +22,31 @@ button:hover{transform:translateY(-1px);box-shadow:0 4px 10px rgba(15,23,42,.06)
 button.primary{background:#d61f1f;border-color:#c11212;color:#fff}
 .small{padding:6px 10px;border-radius:10px;font-size:12px}
 
-/* Лэйаут: левая 1/3, правая 2/3 */
+/* макет 1/3–2/3 */
 .grid{display:grid;grid-template-columns:1fr 2fr;gap:12px;padding:12px}
 @media(max-width:960px){.grid{grid-template-columns:1fr}}
 
-/* Шапка этапа */
-.flag{display:flex;gap:10px;align-items:center;background:#ffffff;border:1px solid var(--line);border-radius:12px;padding:8px 10px}
-.stage-pill{padding:4px 10px;border-radius:999px;background:#eef2ff;border:1px solid #dbe3ff}
-.stage-pill strong{color:#1d4ed8}
+/* панель этапа */
+.flag{display:flex;gap:10px;align-items:center;background:#fff;border:1px solid var(--line);border-radius:12px;padding:8px 10px}
+.stage-pill{padding:4px 10px;border-radius:999px;background:transparent;border:none;font-weight:700;color:var(--text)}
 .timer{font-variant-numeric:tabular-nums;font-size:20px}
 
-/* Таблица слева */
-.badge{width:14px;height:14px;border-radius:50%;border:2px solid #ffffffb3;box-shadow:0 2px 6px rgba(0,0,0,.08)}
+/* таблица слева */
+.badge{width:14px;height:14px;border-radius:50%;border:2px solid #fff;box-shadow:0 2px 6px rgba(0,0,0,.08)}
 .table{width:100%;border-collapse:separate;border-spacing:0 var(--row-gap)}
 .table thead th{font-size:12px;color:var(--muted);text-align:left;padding:0 8px}
 .row{display:grid;grid-template-columns:minmax(120px,1fr) 48px 1fr;align-items:center;background:#fff;border:1px solid var(--line);border-radius:12px;padding:10px}
 .name{display:flex;align-items:center;gap:8px;font-weight:700;font-size:14px}
-.pos{text-align:center;font-variant-numeric:tabular-nums;font-weight:700}
-.progressCell{display:grid;grid-template-columns:auto 1fr;align-items:center;gap:10px}
-.btns{display:grid;grid-template-columns:repeat(2, max-content);gap:6px} /* 2 в ряд */
-.btns .small{padding:4px 8px;border-radius:8px}
-.pbar{height:12px;background:#f1f5f9;border:1px solid #e2e8f0;border-radius:999px;overflow:hidden}
-.pbar>span{display:block;height:100%;width:0;transition:width .5s ease}
+.pos{text-align:center;font-weight:700}
 
-/* Правая колонка */
+/* Колонка «Прогресс» — ТОЛЬКО кнопки, без дорожки */
+.progressCell{display:flex;flex-wrap:wrap;gap:6px}
+.btns{display:grid;grid-template-columns:repeat(2, max-content);gap:6px}
+.btns .small{padding:4px 8px;border-radius:8px}
+
+/* правая колонка — заголовок без подложки + бары */
 .stagePanel{padding:12px}
-.chart-header{background:#fff;border:1px solid #e2e8f0;border-radius:12px;padding:0 12px;display:flex;align-items:center;font-weight:800}
+.chart-header{background:transparent;border:none;border-radius:0;padding:0 12px;display:flex;align-items:center;font-weight:800}
 .chart-header h2{margin:0;font-size:18px}
 .chart{margin-top:var(--row-gap)}
 .chart-row{display:flex;align-items:center;background:#fff;border:1px solid #e2e8f0;border-radius:12px;padding:var(--row-pad-v) 12px;margin-bottom:var(--row-gap)}
@@ -55,8 +55,8 @@ button.primary{background:#d61f1f;border-color:#c11212;color:#fff}
 .meter>span{display:block;height:100%;width:0;transition:width .5s ease}
 .val{margin-left:10px;min-width:34px;text-align:right;font-variant-numeric:tabular-nums;font-weight:800}
 
-/* Прочее */
-.footer{padding:10px 12px;border-top:1px solid var(--line);display:flex;justify-content:space-between;align-items:center;gap:10px}
+/* footer и прочее */
+.footer{padding:10px 12px;border-top:1px solid var(--line);display:flex;justify-content:space-between;align-items:center}
 .hidden{display:none}
 .bonus{position:absolute;pointer-events:none;font-size:22px;filter:drop-shadow(0 2px 6px rgba(0,0,0,.25))}
 .container-relative{position:relative}
@@ -68,7 +68,7 @@ button.primary{background:#d61f1f;border-color:#c11212;color:#fff}
   <div class="header">
     <h1>Гоночная сессия • 7 команд</h1>
     <div class="flag">
-      <span class="stage-pill">Этап: <strong id="stageName">СТАРТ</strong></span>
+      <span class="stage-pill" id="stageName">СТАРТ</span>
       <span class="timer" id="timer">05:00</span>
       <div class="controls">
         <button id="btnStart" class="primary">Старт</button>
@@ -81,7 +81,7 @@ button.primary{background:#d61f1f;border-color:#c11212;color:#fff}
   </div>
 
   <div class="grid">
-    <!-- Левая колонка (1/3): Команда | # | Прогресс -->
+    <!-- Левая колонка: Команда | # | Прогресс (только кнопки) -->
     <div class="section card container-relative">
       <table class="table" aria-live="polite">
         <thead><tr><th>Команда</th><th>#</th><th>Прогресс</th></tr></thead>
@@ -90,19 +90,18 @@ button.primary{background:#d61f1f;border-color:#c11212;color:#fff}
       <div id="bonusLayer"></div>
     </div>
 
-    <!-- Правая колонка (2/3): Заголовок этапа + бары на всю высоту строки -->
+    <!-- Правая колонка: заголовок этапа (без подложки) + гистограммы -->
     <div class="stagePanel card">
       <div id="chartHeader" class="chart-header"><h2 id="stageTitle">СТАРТ</h2></div>
       <div id="stageChart" class="chart"></div>
     </div>
   </div>
 
-  <div class="footer"><div class="note">© Формула обучения — лёгкий старт, честный финиш.</div></div>
+  <div class="footer"><div>© Формула обучения — лёгкий старт, честный финиш.</div></div>
 </div>
 
 <script>
 (()=>{"use strict";
-/* === Конфигурация/состояние === */
 const STORAGE_KEY="race_bars_state_clean_1";
 const COLORS=["var(--c1)","var(--c2)","var(--c3)","var(--c4)","var(--c5)","var(--c6)","var(--c7)"];
 const TEAM_NAMES=["Ferrum","Aquila","Volt","Nebula","Ignite","Blossom","Glacier"];
@@ -122,9 +121,9 @@ const sorted=()=>[...state.teams].sort((a,b)=>b.pts-a.pts);
 function beep(f=880,d=120){try{const a=new (window.AudioContext||window.webkitAudioContext)(),o=a.createOscillator(),g=a.createGain();o.type="square";o.frequency.value=f;g.gain.value=.05;o.connect(g);g.connect(a.destination);o.start();setTimeout(()=>{o.stop();a.close()},d)}catch{}}
 function stageBeep(){beep(660,120);setTimeout(()=>beep(880,150),160);setTimeout(()=>beep(520,180),360)}
 
-/* === Рендер слева (без колонки очков) === */
+/* левая таблица (прогресс = только кнопки) */
 function updateBoard(){
-  const s=sorted(); const leader=Math.max(1,...s.map(t=>t.pts),1);
+  const s=sorted();
   tbody.innerHTML="";
   s.forEach((t,idx)=>{
     const tr=document.createElement("tr"); const td=document.createElement("td"); td.colSpan=3; td.style.padding="0";
@@ -133,35 +132,36 @@ function updateBoard(){
     const dot=document.createElement("span"); dot.className="badge"; dot.style.background=t.color;
     name.append(dot,document.createTextNode(t.name));
     const pos=document.createElement("div"); pos.className="pos"; pos.textContent=idx+1;
+
     const cell=document.createElement("div"); cell.className="progressCell";
     const btns=document.createElement("div"); btns.className="btns";
-    ["+1","+5","+10","+15"].forEach(v=>{const b=document.createElement("button"); b.className="small"; b.textContent=v;
+    ["+1","+5","+10","+15"].forEach(v=>{
+      const b=document.createElement("button"); b.className="small"; b.textContent=v;
       b.onclick=()=>{add(t.id,parseInt(v)); spark(row, v==="+15"?"🟡":(v==="+10"?"⚡":(v==="+5"?"✨":"➕")));};
       btns.appendChild(b);
     });
-    const pbar=document.createElement("div"); pbar.className="pbar"; const fill=document.createElement("span");
-    fill.style.background=t.color; fill.style.width=(t.pts/leader*100).toFixed(1)+"%"; pbar.appendChild(fill);
-    cell.append(btns,pbar);
+    cell.append(btns);
+
     row.append(name,pos,cell); td.appendChild(row); tr.appendChild(td); tbody.appendChild(tr);
   });
 }
 
-/* === Правая колонка: заголовок этапа + бары на всю высоту строки === */
+/* правая колонка — заголовок без подложки + БАРЫ + очки */
 function updateChart(){
   stageTitle.textContent=STAGES[state.stage].name;
   const s=sorted(); const leader=Math.max(1,...s.map(t=>t.pts),1);
   stageChart.innerHTML="";
   s.forEach(t=>{
     const row=document.createElement("div"); row.className="chart-row";
-    const m=document.createElement("div"); m.className="meter"; const f=document.createElement("span");
-    f.style.background=t.color; f.style.width=(t.pts/leader*100).toFixed(1)+"%"; m.appendChild(f);
-    const v=document.createElement("div"); v.className="val"; v.textContent=t.pts; // очки только справа
+    const m=document.createElement("div"); m.className="meter";
+    const f=document.createElement("span"); f.style.background=t.color; f.style.width=(t.pts/leader*100).toFixed(1)+"%"; m.appendChild(f);
+    const v=document.createElement("div"); v.className="val"; v.textContent=t.pts;
     row.append(m,v); stageChart.appendChild(row);
   });
   syncHeaderHeight(); syncRowHeights();
 }
 
-/* === Синхронизация высот === */
+/* выравнивание высот */
 function syncHeaderHeight(){
   const thead=document.querySelector(".table thead");
   const h=thead?thead.getBoundingClientRect().height:0;
@@ -175,12 +175,12 @@ function syncRowHeights(){
     const lh=left[i]?.offsetHeight||56;
     r.style.height=lh+"px";
     const meter=r.querySelector(".meter");
-    meter.style.height=Math.max(10, lh - padV*2) + "px";  // бар на всю строку (минус внутренние отступы)
-    meter.style.borderRadius= (lh/2) + "px";
+    meter.style.height=Math.max(10, lh - padV*2) + "px";
+    meter.style.borderRadius=(lh/2)+"px";
   });
 }
 
-/* === Эффект бонуса === */
+/* эффекты */
 function spark(host,emoji){
   const r=host.getBoundingClientRect(), h=bonusLayer.getBoundingClientRect();
   const b=document.createElement("div"); b.className="bonus"; b.textContent=emoji;
@@ -189,24 +189,19 @@ function spark(host,emoji){
   b.animate([{transform:"translateY(0)",opacity:1},{transform:"translateY(-26px)",opacity:0}],{duration:650,easing:"ease-out"}).onfinish=()=>b.remove();
 }
 
-/* === Логика / таймер / управление === */
+/* логика / таймер / управление */
 function add(id,d){const t=state.teams.find(x=>x.id===id); if(!t) return; t.pts+=d; state.history.push({ts:Date.now(),id,delta:d,stage:state.stage}); save(); render();}
-function undo(){ // отмена последнего начисления
-  const h=state.history.pop(); if(!h){return;}
-  const t=state.teams.find(x=>x.id===h.id); if(t){ t.pts=Math.max(0, t.pts - h.delta); }
-  save(); render();
-}
-function next(){if(state.stage<STAGES.length-1){state.stage++;state.remain=STAGES[state.stage].sec;running=false;document.getElementById("btnStart").disabled=false;stageBeep();save();render();}}
+function undo(){const h=state.history.pop(); if(!h) return; const t=state.teams.find(x=>x.id===h.id); if(t) t.pts=Math.max(0,t.pts-h.delta); save(); render();}
+function next(){if(state.stage<STAGES.length-1){state.stage++;state.remain=STAGES[state.stage].sec;running=false;btnStart.disabled=false;stageBeep();save();render();}}
 function hard(){if(confirm("Обнулить все результаты и перезапустить?")){localStorage.removeItem(STORAGE_KEY);location.reload();}}
 
 let tickLast=performance.now();
-function tick(now){if(!running)return; if(now-tickLast>=1000){state.remain--; tickLast=now; timerEl.textContent=fmt(state.remain); if(state.remain<=3&&state.remain>0) beep(900,90); if(state.remain<=0){stageBeep(); running=false; document.getElementById("btnStart").disabled=false;} save();} requestAnimationFrame(tick);}
-function start(){ if(STAGES[state.stage].name==="ФИНИШ")return; running=true; document.getElementById("btnStart").disabled=true; tickLast=performance.now(); requestAnimationFrame(tick);}
-function pause(){ running=false; document.getElementById("btnStart").disabled=false;}
+function tick(now){if(!running)return;if(now-tickLast>=1000){state.remain--;tickLast=now;timerEl.textContent=fmt(state.remain);if(state.remain<=3&&state.remain>0)beep(900,90);if(state.remain<=0){stageBeep();running=false;btnStart.disabled=false;}save();}requestAnimationFrame(tick);}
+function start(){if(STAGES[state.stage].name==="ФИНИШ")return;running=true;btnStart.disabled=true;tickLast=performance.now();requestAnimationFrame(tick);}
+function pause(){running=false;btnStart.disabled=false;}
 
-/* === Композитный рендер/инициализация === */
-function render(){ stageName.textContent=STAGES[state.stage].name; timerEl.textContent=fmt(state.remain); updateBoard(); updateChart(); }
-function boot(){ render(); btnStart.onclick=start; btnPause.onclick=pause; btnNext.onclick=next; btnUndo.onclick=undo; btnHard.onclick=hard; window.addEventListener("resize",()=>{syncHeaderHeight(); syncRowHeights();}); }
+function render(){stageName.textContent=STAGES[state.stage].name;timerEl.textContent=fmt(state.remain);updateBoard();updateChart();}
+function boot(){render();btnStart.onclick=start;btnPause.onclick=pause;btnNext.onclick=next;btnUndo.onclick=undo;btnHard.onclick=hard;window.addEventListener("resize",()=>{syncHeaderHeight();syncRowHeights();});}
 document.readyState==="loading"?document.addEventListener("DOMContentLoaded",boot):boot();
 })();
 </script>
