--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@ button.primary{background:#d61f1f;border-color:#c11212;color:#fff}
         <button id="btnPause">Пауза</button>
         <button id="btnNext" class="small">Следующий этап</button>
         <button id="btnUndo" class="small">Отмена</button>
-        <button id="btnHard" class="small">Чистый сброс</button>
+        <button id="btnHard" class="small">Сброс</button>
       </div>
     </div>
   </div>
