new stages at loop2

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@ button.primary{background:#d61f1f;border-color:#c11212;color:#fff}
 const STORAGE_KEY="race_bars_state_clean_1";
 const COLORS=["var(--c1)","var(--c2)","var(--c3)","var(--c4)","var(--c5)","var(--c6)","var(--c7)"];
 const DEFAULT_NAMES=["Porsche","Lamborghini","Williams","Lotus","Aston Martin","McLaren","Alfa Romeo"];
-const STAGES=[{name:"Free Practice",sec:60},{name:"Qualifying 1",sec:20},{name:"Qualifying 2",sec:10},{name:"Race",sec:480},{name:"Pit Stop",sec:120}];
+const STAGES=[{name:"Free Practice",sec:60},{name:"Qualifying 1",sec:20},{name:"Qualifying 1.2",sec:10},{name:"Qualifying 2",sec:20},{name:"Qualifying 2.2",sec:10},{name:"Race",sec:480},{name:"Pit Stop",sec:120},{name:"ФИНИШ",sec:1}];
 
 const $=s=>document.querySelector(s);
 const tbody=$("#tbody"), stageName=$("#stageName"), timerEl=$("#timer");
